--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,8 +33,8 @@ set -g mouse on
 # Reload Tmux config
 bind r source-file ~/.tmux.conf \; display "Reloaded config"
 
-bind V split-window -h
-bind H split-window
+bind v split-window -h
+bind h split-window
 
 
 # Undercurl
