--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,8 +33,8 @@ set -g mouse on
 # Reload Tmux config
 bind r source-file ~/.tmux.conf \; display "Reloaded config"
 
-bind v split-window -h
-bind h split-window
+bind u split-window -h
+bind i split-window
 
 
 # Undercurl
@@ -61,6 +61,7 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
