--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,8 +33,8 @@ set -g mouse on
 # Reload Tmux config
 bind r source-file ~/.tmux.conf \; display "Reloaded config"
 
-bind u split-window -h
-bind i split-window
+bind u split-window 
+bind i split-window  -h
 
 
 # Undercurl
