--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,8 +3,8 @@ source "/usr/share/powerline/bindings/tmux/powerline.conf"
 
 # unbind default prefix and set it to ctrl-a
 unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+set -g prefix C-x
+bind C-x send-prefix
 
 # silence visual/acustic bell
 set -g visual-activity off
@@ -33,9 +33,8 @@ set -g mouse on
 # Reload Tmux config
 bind r source-file ~/.tmux.conf \; display "Reloaded config"
 
-bind u split-window 
-bind i split-window  -h
-
+bind u split-window  -h
+bind i split-window 
 
 # Undercurl
 set -g default-terminal "${TERM}"
